1.Поправила везде оформление и цветовую гамму. Теперь при наведении на кнопки, они подсвечиваются. 2.Изменила информацию о нас, выводят его иначе.

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -6,16 +6,22 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <meta charset="UTF-8">
 </head>
+<style>
+    .bd-footer{
+position: relative;
+    }
+</style>
  <body>
 <br>
+
 <footer class="bd-footer text-muted">
     <div class="container">
 
        <ul class="bd-footer-link list-inline">
-            <li class="list-inline-item"><a href='/'>Домой</a></li>
-            <li class="list-inline-item"><a href="/about/">О нас</a></li>
-            <li class="list-inline-item"><a href="/contacts/">Контакты</a></li>
-            <li class="list-inline-item"><a href="/news/">Новости</a></li>
+            <li class="list-inline-item"><a href='/' style="color: white">Домой</a></li>
+            <li class="list-inline-item"><a href="/about/" style="color: white">О нас</a></li>
+            <li class="list-inline-item"><a href="/contacts/" style="color: white">Контакты</a></li>
+            <li class="list-inline-item"><a href="/news/" style="color: white">Новости</a></li>
         </ul>
         <p>© 2017 Все права защищены. Создано группой Сейлор-мун</p>
 
