--- a/main/templates/landing/About.html
+++ b/main/templates/landing/About.html
@@ -9,19 +9,38 @@
    }
          .rightimg{
              float: right;
+             margin: auto;
          }
-    #onas, #onas3{
-
-            color: #071528;
-            font-size: 31px;
+    #onas{
+        color: #071528;
+        font-size: 22px;
         text-align: center;
+        width: -500px;
         }
+    #onas3{
+        color: #071528;
+        font-size: 22px;
+        text-align: center;
+        width: 89%;
+        margin: 0 200px auto;
+    }
          #onas1{
 
-            color: #5be5e4;
+            color: #31d0e5;
             font-size: 40px;
         text-align: center;
         }
+.colonka{
+-webkit-column-width: 200px;
+    -moz-column-width: 200px;
+    column-width: 200px;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 30px;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
+}
 
   </style>
 </head>
@@ -32,9 +51,12 @@
 {% block title %}О нас{% endblock %}
 
 {% block content %}
+
     <p id="onas1">Коротко о нас</p>
-    <p><img src="{% static 'media/pek.jpg' %}" width="40%" hspace="30" vspace="30" class="leftimg"> </p>
+    <div class="colonka">
+
         <p  id="onas">
+<br>
             <br>
             Наша пекарня была открыта совсем недавно – в ноябре 2017 года, но уже успела завоевать любовь посетителей.
             Мы старались создать уютное место, где каждый сможет насладиться вкуснейшей выпечкой.
@@ -42,23 +64,26 @@
             <br>Также, удобно сделать
             заказ на нашем сайте и получить свежие лакомства с доставкой на дом.
             <br>
+            <img src="{% static 'media/pek.jpg' %}" width="100%" vspace="0" >
+            <br>
+            <br>
             <br> Прежде всего, мы заботимся о качестве нашей продукции – только натуральные ингредиенты, разнообразные начинки и лучшие рецепты.
             Мы не завышаем цены и хотим показать, что качественно – не значит дорого. Для нашей компании решающим фактором является вкус поэтому, если хотите вкусной выпечки -
             мы с удовольствием будем рады видеть вас. </p>
-     <br>
-    <br>
-    <br>
-    <p id="onas1">Создатели</p>
-    <p><img src="{% static 'media/onas.jpg' %}" width="30%" hspace="30" vspace="30" class="rightimg"> </p>
-<p id="onas3">
+    </div>
 
-<br>Идея создания собственной пекарни появилась в сентябре 2017 года, когда три подруги решили зайти в ближайшее кафе, чтобы перекусить вкусной выпечки, но представленный ассортимент только
+    <p id="onas1">Создатели</p>
+    <p><img src="{% static 'media/onas.jpg' %}" width="25%" hspace="30" vspace="0" class="leftimg"> </p>
+<p id="onas3">
+<br>
+Идея создания собственной пекарни появилась в сентябре 2017 года, когда три подруги решили зайти в ближайшее кафе, чтобы перекусить вкусной выпечки, но представленный ассортимент только
     огорчил: пирожки были совсем не вкусные, заветревшиеся и черствые.
 Наверное, этот момент стал решающим и идея собственной пекарни появилась у каждой в голове, ведь от вкусных булочек, приготовленных по бабушкиному рецепту, или сладких пирогов, сделанных с
 любовью и душой, не откажется никто.
 <br>Да, возможно эти девушки больше понимают в программировании, в красочных постах в Инстаграмме или в косметике, но от вкусного перекуса ни одна из них просто не сможет отказаться,
 ведь ничего не может быть лучше придти после длинного трудового дня в уютное место, где тебя примут с заботой и теплотой, предложат широкий ассортимент продукции и вынесут всё теплым и горячим.
 </p>
+    <br>
 {% endblock %}
 
 </body>
