--- a/main/templates/landing/contacts.html
+++ b/main/templates/landing/contacts.html
@@ -15,7 +15,7 @@
         }
          #onas1{
 
-            color: #5be5e4;
+            color: #31d0e5;
             font-size: 40px;
         text-align: center;
         }
@@ -58,10 +58,7 @@
 <br>
 <br>
 <br>
-    <br>
-<br>
-<br>
-<br>
+
 {% endblock %}
 
 </body>
