--- a/main/templates/landing/news.html
+++ b/main/templates/landing/news.html
@@ -15,7 +15,7 @@
                                 <div class="col-md-8">
                                     <div class="card-block">
                                         <div class="col-md-9">
-                                            <h4 class="card-title text-left">{{ new.title }}</h4>
+                                            <h4 class="card-title text-left" style="color: #2ecde2">{{ new.title }}</h4>
                                         </div>
                                         <div class="col-md-3">
                                             <small class="card-subtitle mb-2 text-right">{{ new.created|date:"Y-m-d G:i:s" }}</small>
