--- a/main/templates/registration/signup.html
+++ b/main/templates/registration/signup.html
@@ -9,6 +9,17 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
+    <style>
+    .btn
+    {
+    background: #2ecde2;
+    border: 1px solid #2ecde2;
+    }
+    .btn:hover{
+         border: 1px solid #13a3d0;
+        background: #13a3d0;
+    }
+    </style>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12">
