--- a/main/templates/product/product-detail.html
+++ b/main/templates/product/product-detail.html
@@ -1,7 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
-
+    <style>
+    .btn
+    {
+    background: #2ecde2;
+    border: 1px solid #2ecde2;
+    }
+    .btn{
+         border: 1px solid #13a3d0;
+        background: #13a3d0;
+    }
+    </style>
 {% block content %}
+        <style>
+    .btn
+    {
+    background: #2ecde2;
+    border: 1px solid #2ecde2;
+    }
+    .btn:hover{
+         border: 1px solid #13a3d0;
+        background: #13a3d0;
+    }
+    </style>
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
@@ -15,7 +36,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h3 class="card-title text-center">{{ product.name }}</h3>
-                        <p class="card-text">{{ product.description }}</p>
+                        <p class="card-text text-justify">{{ product.description }}</p>
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">{{ product.price }} рублей</li>
