--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -20,19 +20,20 @@
 </head>
 <body>
 
-    <div class="wrapper">
-        {% include 'navbar.html' %}
+<div class="wrapper">
+    {% include 'navbar.html' %}
 
-        {% block content %}
+    {% block content %}
 
-        {% endblock %}
+    {% endblock %}
 
-        {% include 'footer.html' %}
-    </div>
+
+    {% include 'footer.html' %}
+</div>
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="{% static 'js/script.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
