--- a/main/templates/landing/product_item.html
+++ b/main/templates/landing/product_item.html
@@ -3,23 +3,20 @@
 <!-- Custom styles -->
 <link rel="stylesheet" href="{% static 'style.css' %}">
 <link rel="stylesheet" href="{% static 'product.css' %}">
-    <style>
-    .btn
-    {
-    background: #2ecde2;
-    border: 1px solid #2ecde2;
+<style>
+    .btn {
+        background: #2ecde2;
+        border: 1px solid #2ecde2;
     }
-    .btn:hover{
-         border: 1px solid #13a3d0;
+
+    .btn:hover {
+        border: 1px solid #13a3d0;
         background: #13a3d0;
     }
-{% comment %}    .col-lg-4:hover{
-         background: rgba(50, 227, 248, 0.37);
-    }{% endcomment %}
-    .col-lg-4{
-            position: relative;
-    height: 100%;
-     padding-bottom: 100px;}
+
+    .col-lg-4 {
+        position: relative;
+    }
 </style>
 <div class="col-lg-4">
     <div class="product-item">
@@ -36,10 +33,9 @@
         <div>
             {{ product.price }} рублей
         </div>
-        <div class="add-to-card-btn">
-            <button class="btn btn-success" >
-                Добавить в корзину
-            </button>
+        <div style="margin: 20px">
+            <a href="{% url 'product' product.id %}" class="btn btn-primary">Перейти к покупке</a>
         </div>
+
     </div>
 </div>
