--- a/main/templates/registration/signin.html
+++ b/main/templates/registration/signin.html
@@ -3,38 +3,39 @@
 {% load static %}
 
 {% block stylesheet %}
-  <link rel="stylesheet" href="{% static 'accounts.css' %}">
+    <link rel="stylesheet" href="{% static 'accounts.css' %}">
 {% endblock %}
 
 {% block content %}
     <style>
-    .btn
-    {
-    background: #2ecde2;
-    border: 1px solid #2ecde2;
-    }
-    .btn:hover{
-         border: 1px solid #13a3d0;
-        background: #13a3d0;
-    }
+        .btn {
+            background: #2ecde2;
+            border: 1px solid #2ecde2;
+        }
+
+        .btn:hover {
+            border: 1px solid #13a3d0;
+            background: #13a3d0;
+        }
     </style>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-12">
-        <div class="card">
-          <div class="card-body">
-            <h3 class="card-title text-center">Вход</h3>
-            <form method="post" novalidate>
-              {% csrf_token %}
-              {% include 'form.html' %}
-              <button type="submit" class="btn btn-success btn-center">Войти</button>
-            </form>
-          </div>
-          <div class="card-footer text-muted text-center">
-            Впервые у нас? <a href="{% url 'signup' %}">Зарегистрироваться</a>
-          </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title text-center">Вход</h3>
+                        <form method="post" novalidate>
+                            {% csrf_token %}
+                            {% include 'form.html' %}
+                            <button type="submit" class="btn btn-success btn-center">Войти</button>
+                        </form>
+                    </div>
+                    <div class="card-footer text-muted text-center">
+                        Впервые у нас? <a href="{% url 'signup' %}">Зарегистрироваться</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
+    <h1 style="margin-bottom: 6%"></h1>
 {% endblock %}
